複数の属性の取り扱いに対応

--- a/SGFramework/Sample/ValueObject/ValueObjectAttributeTemplate.tt
+++ b/SGFramework/Sample/ValueObject/ValueObjectAttributeTemplate.tt
@@ -1,7 +1,7 @@
 <#@ template language="C#" visibility="internal" linePragmas="false" #>
 using System;
 
-namespace GeneratorSample
+namespace SGFramework.Sample.ValueObject
 {
     [Flags]
     internal enum ValueOption
